# web-scrapping-alert

./: README.md  iphone_prices.db  macbook_prices.db  pyproject.toml
src/web-scrapping-alert/: app.py  iphone_app.py  macbook_app.py  paraguai_app.py
src/web_scrapping_alert/: app.py
